--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.3.1",
-        "@tailwindcss/typography": "^0.4.0",
-        "alpinejs": "^2.7.3",
+        "@popperjs/core": "^2.9.2",
         "axios": "^0.21",
+        "bootstrap": "^5.0.0-beta3",
+        "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "postcss-import": "^14.0.1",
-        "tailwindcss": "^2.0.1"
+        "resolve-url-loader": "^3.1.3",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1"
     }
 }
