--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=a1c8d728051995d7969b",
+    "/css/app.css": "/css/app.css?id=cb591c1ee93139b81049"
 }
